[package]
name = "ape"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]


[dependencies]
bincode = "0.9"
chrono = "0.4"
clap = { version = "2.27", features = ["yaml"] }
lazy_static = "*"
quick-error = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"

[target.'cfg(target_os = "linux")'.dependencies]
scanlib = { git = "https://github.com/gadomski/rivlib-rs" }
