[package]
name = "ape"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]


[dependencies]
chrono = "0.4"
clap = { version = "2.32", features = ["yaml"] }
cpd = { path = "../cpd-rs" }
csv = "1.0"
failure = "0.1"
las = "0.6"
nalgebra = "0.16"
pbr = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
spade = "1.6"
toml = "*"
